--- a/index.html
+++ b/index.html
@@ -390,34 +390,49 @@
 
     <!-- Camera Modal -->
     <div id="camera-modal"
-        class="fixed inset-0 bg-black z-50 flex flex-col items-center justify-center overflow-hidden">
-        <video id="camera-stream" autoplay playsinline class="absolute inset-0 w-full h-full object-cover"></video>
-        <canvas id="camera-canvas" class="hidden"></canvas>
-        <div class="absolute bottom-10 left-0 right-0 flex items-center justify-center gap-12 z-20 pointer-events-none">
-            <button data-action="close-camera"
-                class="bg-black/50 text-white rounded-full p-4 pointer-events-auto backdrop-blur-sm hover:bg-black/70 transition"><i
-                    data-lucide="x" class="h-8 w-8"></i></button>
-            <button data-action="capture-photo"
-                class="bg-white rounded-full h-20 w-20 border-4 border-white/50 pointer-events-auto shadow-lg active:scale-95 transition"></button>
-            <div class="w-16"></div> <!-- Spacer to balance layout -->
+        class="fixed inset-0 bg-black bg-opacity-80 z-50 flex items-center justify-center p-4 hidden">
+        <div
+            class="bg-white rounded-xl shadow-2xl w-full max-w-lg overflow-hidden flex flex-col animate-in fade-in zoom-in duration-200">
+            <div class="px-5 py-4 border-b">
+                <h3 class="font-bold text-lg text-slate-800">Live Camera</h3>
+            </div>
+            <div class="relative bg-black aspect-[3/4] w-full items-center justify-center flex overflow-hidden">
+                <video id="camera-stream" autoplay playsinline class="w-full h-full object-cover"></video>
+                <canvas id="camera-canvas" class="hidden"></canvas>
+            </div>
+            <div class="px-5 py-4 border-t bg-slate-50 flex justify-end gap-3">
+                <button data-action="close-camera"
+                    class="px-4 py-2 rounded-lg text-slate-600 font-medium hover:bg-slate-200 transition">Cancel</button>
+                <button data-action="capture-photo"
+                    class="px-4 py-2 rounded-lg bg-teal-600 text-white font-medium hover:bg-teal-700 shadow-md transition">Capture</button>
+            </div>
         </div>
     </div>
 
     <!-- QR Scanner Modal -->
     <div id="qr-scanner-modal"
-        class="fixed inset-0 bg-black z-50 flex flex-col items-center justify-center hidden overflow-hidden">
-        <video id="qr-video" class="absolute inset-0 w-full h-full object-cover" autoplay playsinline></video>
-        <div class="scanner-frame z-10">
-            <div class="scanner-line"></div>
+        class="fixed inset-0 bg-black bg-opacity-80 z-50 flex items-center justify-center p-4 hidden">
+        <div
+            class="bg-white rounded-xl shadow-2xl w-full max-w-lg overflow-hidden flex flex-col animate-in fade-in zoom-in duration-200">
+            <div class="px-5 py-4 border-b flex justify-between items-center">
+                <h3 class="font-bold text-lg text-slate-800">Plot Scanner</h3>
+            </div>
+            <div class="relative bg-black aspect-square w-full items-center justify-center flex overflow-hidden">
+                <video id="qr-video" autoplay playsinline class="w-full h-full object-cover"></video>
+                <!-- Scanner Lines Overlay -->
+                <div class="scanner-frame z-10">
+                    <div class="scanner-line"></div>
+                </div>
+                <div class="absolute top-4 w-full text-center text-white px-6 z-10 drop-shadow-md">
+                    <p class="text-sm bg-black/50 px-3 py-1 rounded-full inline-block backdrop-blur-sm">Point at plot QR
+                        code</p>
+                </div>
+            </div>
+            <div class="px-5 py-4 border-t bg-slate-50 flex justify-end gap-3">
+                <button data-action="close-qr-scanner"
+                    class="px-4 py-2 rounded-lg text-slate-600 font-medium hover:bg-slate-200 transition">Cancel</button>
+            </div>
         </div>
-        <div class="absolute top-10 w-full text-center text-white px-6 z-10 drop-shadow-md">
-            <h3 class="text-xl font-bold mb-2">Plot Scanner</h3>
-            <p class="text-sm opacity-90">Position plot marker within frame</p>
-        </div>
-        <button data-action="close-qr-scanner"
-            class="absolute bottom-10 bg-black/50 text-white rounded-full p-4 hover:bg-black/70 transition z-20 backdrop-blur-sm">
-            <i data-lucide="x" class="h-8 w-8"></i>
-        </button>
     </div>
 
     <!-- Sidebar toggle script for mobile -->
