Change camera modal display style to flex
Updated camera modal display style to flex for better centering.

--- a/index.html
+++ b/index.html
@@ -2393,7 +2393,8 @@
                 try {
                     cameraStream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
                     videoElement.srcObject = cameraStream;
-                    cameraModal.style.display = 'block';
+                    cameraModal.classList.remove('hidden');
+                    cameraModal.style.display = 'flex'; // FORCE FLEX for centering
                 } catch (err) {
                     console.error("Camera Error:", err);
                     showToast("Could not access camera. Check browser permissions.", 'error');
