--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         }
 
         /* Cropper Modal */
-        #cropper-modal {
+        /* Cropper Modal */
+        #cropper-modal-fixed {
             display: none;
         }
 
@@ -367,8 +368,8 @@
     <div id="toast" class="toast"></div>
 
     <!-- Cropper Modal -->
-    <div id="cropper-modal"
-        class="fixed inset-0 bg-black bg-opacity-70 flex flex-col items-center justify-center z-50 p-4">
+    <div id="cropper-modal-fixed"
+        class="fixed inset-0 bg-black bg-opacity-70 flex flex-col items-center justify-center z-[9999] p-4 hidden">
         <div class="bg-white rounded-lg p-4 w-full max-w-2xl">
             <h3 class="text-lg font-bold mb-4">Crop & Rotate Image</h3>
             <div class="img-container">
@@ -521,7 +522,7 @@
             const modalContainer = document.getElementById('modal-container');
             const loadingOverlay = document.getElementById('loading-overlay');
             const toast = document.getElementById('toast');
-            const cropperModal = document.getElementById('cropper-modal');
+            const cropperModal = document.getElementById('cropper-modal-fixed');
             const imageToCrop = document.getElementById('image-to-crop');
             const cameraModal = document.getElementById('camera-modal-fixed');
             const videoElement = document.getElementById('camera-stream');
@@ -2293,7 +2294,8 @@
             function openCropper(imageData, trialId) {
                 state.currentTrialIdForCamera = trialId;
                 imageToCrop.src = imageData;
-                cropperModal.style.display = 'block';
+                cropperModal.classList.remove('hidden');
+                cropperModal.style.display = 'flex'; // FORCE FLEX
                 if (cropper) cropper.destroy();
                 cropper = new Cropper(imageToCrop, { viewMode: 0, autoCrop: false, background: false, movable: true, zoomable: true, scalable: true, rotatable: true });
             }
@@ -2301,6 +2303,7 @@
             function closeCropper() {
                 if (cropper) cropper.destroy();
                 cropper = null;
+                cropperModal.classList.add('hidden');
                 cropperModal.style.display = 'none';
                 if (state.photoQueue.length > 0) processPhotoQueue(state.currentTrialIdForCamera);
                 else state.currentTrialIdForCamera = null;
