--- a/index.html
+++ b/index.html
@@ -10629,37 +10629,55 @@ Write a 2-3 paragraph executive summary highlighting key findings, treatment per
                 }
 
                 async generateText(prompt) {
-                    const provider = this.providers.find(p => p.id === 'gemini'); // Default to Gemini
-                    if (!provider) throw new Error('Gemini provider not found');
-                    const apiKey = this.getAPIKey(provider.id);
-                    if (!apiKey) throw new Error('AI API Key missing. Please add a Gemini Key in Settings.');
-                    if (!this.hasQuota(provider)) throw new Error('Daily AI Quota exceeded.');
-
-                    try {
-                        const response = await fetch(`${provider.endpoint}?key=${apiKey}`, {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json' },
-                            body: JSON.stringify({
-                                contents: [{ parts: [{ text: prompt }] }]
-                            })
-                        });
-
-                        if (!response.ok) {
-                            const err = await response.text();
-                            throw new Error(`AI Error: ${err}`);
+                    // Try each provider in order until one succeeds
+                    for (const provider of this.providers) {
+                        const apiKey = this.getAPIKey(provider.id);
+                        if (!apiKey) {
+                            console.log(`[AI] Skipping ${provider.name} - no API key`);
+                            continue;
                         }
 
-                        const data = await response.json();
-                        if (!data.candidates || data.candidates.length === 0) throw new Error('No content generated');
+                        if (!this.hasQuota(provider)) {
+                            console.log(`[AI] Skipping ${provider.name} - quota exceeded`);
+                            continue;
+                        }
 
-                        this.usage[provider.id] = (this.usage[provider.id] || 0) + 1;
-                        this.saveUsageStats();
+                        try {
+                            console.log(`[AI] Trying ${provider.name} for text generation...`);
+                            
+                            // Simple text generation endpoint (works for Gemini)
+                            const response = await fetch(`${provider.endpoint}?key=${apiKey}`, {
+                                method: 'POST',
+                                headers: { 'Content-Type': 'application/json' },
+                                body: JSON.stringify({
+                                    contents: [{ parts: [{ text: prompt }] }]
+                                })
+                            });
 
-                        return data.candidates[0].content.parts[0].text;
-                    } catch (e) {
-                        console.error("Generate Text Error:", e);
-                        throw e;
+                            if (!response.ok) {
+                                const err = await response.text();
+                                throw new Error(`AI Error: ${err}`);
+                            }
+
+                            const data = await response.json();
+                            if (!data.candidates || data.candidates.length === 0) {
+                                throw new Error('No content generated');
+                            }
+
+                            // Success! Track usage and return
+                            this.usage[provider.id] = (this.usage[provider.id] || 0) + 1;
+                            this.saveUsageStats();
+                            console.log(`[AI] ✅ Success with ${provider.name}`);
+                            return data.candidates[0].content.parts[0].text;
+                            
+                        } catch (e) {
+                            console.warn(`[AI] ${provider.name} failed:`, e.message);
+                            // Continue to next provider
+                        }
                     }
+
+                    // All providers failed
+                    throw new Error('All AI providers failed or have no quota. Please check your API keys and quotas.');
                 }
 
                 async analyzePhoto(photoUrl, context) {
